2012-12-26  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-dedicated-window): New user variable.
	(bbdb-mua-pop-up): Renamed from bbdb-message-pop-up.  Doc fix.
	(bbdb-mua-pop-up-window-size): New variable.
	(bbdb-pop-up-window-size): Doc fix.  Allow value t.
	(bbdb-pop-up-window): Use it.  Simplify.  Use
	display-buffer-record-window / set-window-dedicated-p so that the
	BBDB window is popped up such that quit-window can delete it.
	Suggested by Martin Rudalics.
	(bbdb-display-records): Clean up.

	* lisp/bbdb-mua.el (bbdb-mua-mode-alist): New variable.
	(bbdb-mua): Use it.
	(bbdb-mua-window-p): New function.
	(bbdb-mua-display-records, bbdb-mua-edit-field)
	(bbdb-mua-auto-update): Use it.

2012-12-25  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-vm.el: (bbdb/vm-auto-add-label-list)
	(bbdb/vm-auto-add-label-field): Doc fix.
	(bbdb/vm-auto-add-label): Doc fix and cleanup.

2012-12-25  Roland Winkler  <winkler@gnu.org>
	* README: Minor docfix.

2012-12-25  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el, lisp/bbdb-com.el, lisp/bbdb-mua.el:
	* lisp/bbdb-print.el, lisp/bbdb-anniv.el, lisp/bbdb-ispell.el:
	* lisp/bbdb-migrate.el, lisp/bbdb-vm.el, lisp/bbdb-gnus.el: For
	the user-defined fields of a record replace the generic internal
	name `notes' by `xfield'.

	* lisp/bbdb.el (bbdb-layout-alist, bbdb-name-format, bbdb-image)
	(bbdb-default-domain, bbdb-auto-notes-rules)
	(bbdb-mail-alias-field, bbdb-name-face-alist, bbdb-record-type)
	(bbdb-timestamp, bbdb-creation-date)
	(bbdb-display-name-organization): Doc fix.
	(bbdb-xfields-sort-order): Renamed from bbdb-notes-sort-order
	(bbdb-merge-xfield-function-alist): Renamed from
	bbdb-merge-notes-function-alist
	(bbdb-xfield-label-list): Renamed from bbdb-notes-label-list.
	(bbdb-record-xfields): Renamed from bbdb-record-Notes.
	(bbdb-record-set-xfields): Renamed from bbdb-record-set-Notes.
	(bbdb-record-xfield): Renamed from bbdb-record-note.
	(bbdb-record-set-xfield): Renamed from bbdb-record-set-note.